src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    /* main */
    .main-container {
      @apply flex min-h-max flex-col items-center max-md:pb-0 sm:px-10 w-screen
    }

    .resume-button {
        @apply inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600
    }

    .header {
      @apply text-white text-3xl font-bold mt-[10rem] leading-loose
    }
    .responsive-input {
      @apply bg-transparent  border-b  py-0  h-[4.2rem] md:h-[3.5rem] focus:h-[6rem] focus:md:h-[4rem]  outline-none focus:border-[#306ec3] focus:text-white focus:placeholder:text-xs focus:placeholder:absolute focus:placeholder:top-[-0.29rem] focus:placeholder:left-0 focus:placeholder:text-[#306ec3] duration-700 hover:border-[#306ec3]

    }


}

